[package]
name = "rustdb"
version = "0.1.0"
edition = "2021"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# Testing
tempfile = "3.8"

# Serialization
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
# Testing utilities
assert_fs = "1.0"
predicates = "3.0"
