[package]
name = "rustdb"
version = "0.1.0"
edition = "2021"

[dependencies]
# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.11.6"

# Testing
tempfile = "3.8"

# Serialization
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
assert_fs = "1.0"
predicates = "3.0"